fix the overflow-x issue in mobile

--- a/src/Views/Home/style.scss
+++ b/src/Views/Home/style.scss
@@ -624,6 +624,7 @@
         font-size: 9px;
     }
     .home-wrapper {
+        overflow-x: hidden;
         .menus-container {
             .right {
                 .title {
